trying to write BatchInsert